--- a/style.css
+++ b/style.css
@@ -185,6 +185,15 @@ a{
     color: rgb(98, 98, 98);
 }
 
+.label{
+    display: flex;
+}
+
+.ig-logo{
+    margin-top: 10px;
+    width: 10%;
+}
+
 @media only screen and (max-width:1030px){
     #hero-box{
         display: flex;
