--- a/final-project/css/style.css
+++ b/final-project/css/style.css
@@ -195,51 +195,51 @@ a{
 }
 
 #foundations:hover{
-    content: url("assets/gif/foundations.gif");
+    content: url("../assets/gif/foundations.gif");
 }
 
 #kasa:hover{
-    content: url("assets/gif/kasa.gif");
+    content: url("../assets/gif/kasa.gif");
 }
 
 #modernx:hover{
-    content: url("assets/gif/modernx.gif");
+    content: url("../assets/gif/modernx.gif");
 }
 
 #kcn:hover{
-    content: url("assets/gif/kcn.gif");
+    content: url("../assets/gif/kcn.gif");
 }
 
 #vsu:hover{
-    content: url("assets/gif/vsu.gif");
+    content: url("../assets/gif/vsu.gif");
 }
 
 #nsu:hover{
-    content: url("assets/gif/nsu.gif");
+    content: url("../assets/gif/nsu.gif");
 }
 
 #samahang:hover{
-    content: url("assets/gif/samahang.gif");
+    content: url("../assets/gif/samahang.gif");
 }
 
 #aca:hover{
-    content: url("assets/gif/aca.gif");
+    content: url("../assets/gif/aca.gif");
 }
 
 #kbm:hover{
-    content: url("assets/gif/kbm.gif");
+    content: url("../assets/gif/kbm.gif");
 }
 
 #seoula:hover{
-    content: url("assets/gif/seoula.gif");
+    content: url("../assets/gif/seoula.gif");
 }
 
 #koreos:hover{
-    content: url("assets/gif/koreos.gif");
+    content: url("../assets/gif/koreos.gif");
 }
 
 #playground:hover{
-    content: url("assets/gif/playground.gif");
+    content: url("../assets/gif/playground.gif");
 }
 
 
